compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON vars aux_funcion pn_go_main main pn_program_end
Rule 2     program -> PROGRAM ID SEMICOLON vars pn_go_main main pn_program_end
Rule 3     program -> PROGRAM ID SEMICOLON aux_funcion pn_go_main main pn_program_end
Rule 4     program -> PROGRAM ID SEMICOLON pn_go_main main pn_program_end
Rule 5     main -> MAIN pn_current_function LPAREN RPAREN vars bloque
Rule 6     main -> MAIN pn_current_function LPAREN RPAREN bloque
Rule 7     aux_funcion -> funcion
Rule 8     aux_funcion -> funcion aux_funcion
Rule 9     funcion -> tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
Rule 10    funcion -> tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
Rule 11    funcion -> tipo_retorno MODULE ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
Rule 12    funcion -> tipo_retorno MODULE ID pn_add_function LPAREN RPAREN bloque pn_end_function
Rule 13    vars -> VAR var
Rule 14    var -> tipo COLON lista_ids SEMICOLON
Rule 15    var -> tipo COLON lista_ids SEMICOLON var
Rule 16    tipo_retorno -> tipo
Rule 17    tipo_retorno -> VOID pn_current_type
Rule 18    tipo -> INT pn_current_type
Rule 19    tipo -> FLOAT pn_current_type
Rule 20    tipo -> CHAR pn_current_type
Rule 21    parametros -> tipo ID pn_add_parameter
Rule 22    parametros -> tipo ID pn_add_parameter COMMA parametros
Rule 23    lista_ids -> aux_lista_rec
Rule 24    aux_lista_rec -> aux_lista
Rule 25    aux_lista_rec -> aux_lista COMMA aux_lista_rec
Rule 26    aux_lista -> ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
Rule 27    aux_lista -> ID pn_add_symbol LSQUARE CTE_INT RSQUARE
Rule 28    aux_lista -> ID pn_add_symbol
Rule 29    escritura -> WRITE LPAREN aux_escritura RPAREN SEMICOLON
Rule 30    aux_escritura -> pn_push_write_operator letrero pn_write
Rule 31    aux_escritura -> pn_push_write_operator expresion pn_write
Rule 32    aux_escritura -> pn_push_write_operator letrero pn_write COMMA aux_escritura
Rule 33    aux_escritura -> pn_push_write_operator expresion pn_write COMMA aux_escritura
Rule 34    condicional -> WHILE pn_while_1 LPAREN expresion pn_while_2 RPAREN DO bloque pn_while_3
Rule 35    bloque -> LBRACKET estatutos RBRACKET
Rule 36    bloque -> LBRACKET RBRACKET
Rule 37    estatutos -> estatuto estatutos
Rule 38    estatutos -> estatuto
Rule 39    estatuto -> asignacion
Rule 40    estatuto -> condicional
Rule 41    estatuto -> escritura
Rule 42    estatuto -> retorno
Rule 43    estatuto -> lectura
Rule 44    estatuto -> decision
Rule 45    estatuto -> no_condicional
Rule 46    estatuto -> llamada SEMICOLON
Rule 47    asignacion -> ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign SEMICOLON
Rule 48    retorno -> RETURN pn_push_operator LPAREN expresion pn_retorno RPAREN SEMICOLON
Rule 49    lectura -> READ LPAREN aux_lectura RPAREN SEMICOLON
Rule 50    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read
Rule 51    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read dimensiones
Rule 52    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read COMMA aux_lectura
Rule 53    aux_lectura -> pn_push_read_operator ID pn_push_operand_and_type pn_read dimensiones COMMA aux_lectura
Rule 54    letrero -> QUOTATION aux_letrero QUOTATION
Rule 55    letrero -> QUOTATION QUOTATION
Rule 56    aux_letrero -> CTE_CHAR
Rule 57    aux_letrero -> CTE_CHAR aux_letrero
Rule 58    decision -> IF LPAREN expresion pn_if_1 RPAREN THEN bloque pn_if_2
Rule 59    decision -> IF LPAREN expresion pn_if_1 RPAREN THEN bloque ELSE pn_else bloque pn_if_2
Rule 60    llamada -> ID pn_verify_func LPAREN pn_func_era aux_llamada pn_arg_count RPAREN pn_func_gosub
Rule 61    aux_llamada -> expresion pn_verify_argument
Rule 62    aux_llamada -> expresion pn_verify_argument COMMA aux_llamada
Rule 63    no_condicional -> FOR ID pn_push_operand_and_type ASSIGN pn_push_operator expresion pn_assign TO expresion pn_for_push_comparison pn_comparison pn_for_go_false DO bloque pn_for_go_back
Rule 64    dimensiones -> LSQUARE expresion RSQUARE LSQUARE expresion RSQUARE
Rule 65    dimensiones -> LSQUARE expresion COMMA expresion RSQUARE
Rule 66    dimensiones -> LSQUARE expresion RSQUARE
Rule 67    expresion -> comparacion aux_expresion
Rule 68    expresion -> aux_comparacion
Rule 69    aux_expresion -> AND pn_push_operator comparacion pn_and
Rule 70    aux_expresion -> OR pn_push_operator comparacion pn_or
Rule 71    aux_expresion -> AND pn_push_operator comparacion pn_and aux_expresion
Rule 72    aux_expresion -> OR pn_push_operator comparacion pn_or aux_expresion
Rule 73    comparacion -> exp LESSTHAN pn_push_operator exp pn_comparison
Rule 74    comparacion -> exp GREATERTHAN pn_push_operator exp pn_comparison
Rule 75    comparacion -> exp EQUAL pn_push_operator exp pn_comparison
Rule 76    aux_comparacion -> exp LESSTHAN pn_push_operator exp pn_comparison
Rule 77    aux_comparacion -> exp GREATERTHAN pn_push_operator exp pn_comparison
Rule 78    aux_comparacion -> exp EQUAL pn_push_operator exp pn_comparison
Rule 79    aux_comparacion -> exp
Rule 80    exp -> termino pn_addition_substraction
Rule 81    exp -> termino pn_addition_substraction PLUS pn_push_operator exp
Rule 82    exp -> termino pn_addition_substraction MINUS pn_push_operator exp
Rule 83    termino -> factor pn_multiplication_division
Rule 84    termino -> factor pn_multiplication_division MULT pn_push_operator termino
Rule 85    termino -> factor pn_multiplication_division DIV pn_push_operator termino
Rule 86    factor -> LPAREN expresion RPAREN
Rule 87    factor -> PLUS var_cte
Rule 88    factor -> PLUS llamada
Rule 89    factor -> MINUS var_cte
Rule 90    factor -> MINUS llamada
Rule 91    factor -> var_cte
Rule 92    factor -> llamada
Rule 93    var_cte -> ID pn_push_operand_and_type
Rule 94    var_cte -> CTE_INT pn_push_constant_and_type
Rule 95    var_cte -> CTE_FLOAT pn_push_constant_and_type
Rule 96    var_cte -> CTE_CHAR pn_push_constant_and_type
Rule 97    pn_current_function -> <empty>
Rule 98    pn_current_type -> <empty>
Rule 99    pn_go_main -> <empty>
Rule 100   pn_program_end -> <empty>
Rule 101   pn_add_symbol -> <empty>
Rule 102   pn_push_constant_and_type -> <empty>
Rule 103   pn_push_operand_and_type -> <empty>
Rule 104   pn_push_operator -> <empty>
Rule 105   pn_addition_substraction -> <empty>
Rule 106   pn_multiplication_division -> <empty>
Rule 107   pn_assign -> <empty>
Rule 108   pn_push_read_operator -> <empty>
Rule 109   pn_read -> <empty>
Rule 110   pn_push_write_operator -> <empty>
Rule 111   pn_write -> <empty>
Rule 112   pn_and -> <empty>
Rule 113   pn_or -> <empty>
Rule 114   pn_comparison -> <empty>
Rule 115   pn_if_1 -> <empty>
Rule 116   pn_if_2 -> <empty>
Rule 117   pn_else -> <empty>
Rule 118   pn_while_1 -> <empty>
Rule 119   pn_while_2 -> <empty>
Rule 120   pn_while_3 -> <empty>
Rule 121   pn_for_push_comparison -> <empty>
Rule 122   pn_for_go_false -> <empty>
Rule 123   pn_for_go_back -> <empty>
Rule 124   pn_add_function -> <empty>
Rule 125   pn_add_parameter -> <empty>
Rule 126   pn_param_count -> <empty>
Rule 127   pn_arg_count -> <empty>
Rule 128   pn_func_var_count -> <empty>
Rule 129   pn_end_function -> <empty>
Rule 130   pn_verify_func -> <empty>
Rule 131   pn_func_era -> <empty>
Rule 132   pn_verify_argument -> <empty>
Rule 133   pn_func_gosub -> <empty>
Rule 134   pn_retorno -> <empty>

Terminals, with rules where they appear

AND                  : 69 71
ASSIGN               : 47 63
CHAR                 : 20
COLON                : 14 15
COMMA                : 22 25 32 33 52 53 62 65
CTE_CHAR             : 56 57 96
CTE_FLOAT            : 95
CTE_INT              : 26 26 27 94
DIV                  : 85
DO                   : 34 63
ELSE                 : 59
EQUAL                : 75 78
FLOAT                : 19
FOR                  : 63
GREATERTHAN          : 74 77
ID                   : 1 2 3 4 9 10 11 12 21 22 26 27 28 47 50 51 52 53 60 63 93
IF                   : 58 59
INT                  : 18
LBRACKET             : 35 36
LESSTHAN             : 73 76
LPAREN               : 5 6 9 10 11 12 29 34 48 49 58 59 60 86
LSQUARE              : 26 26 27 64 64 65 66
MAIN                 : 5 6
MINUS                : 82 89 90
MODULE               : 9 10 11 12
MULT                 : 84
OR                   : 70 72
PLUS                 : 81 87 88
PROGRAM              : 1 2 3 4
QUOTATION            : 54 54 55 55
RBRACKET             : 35 36
READ                 : 49
RETURN               : 48
RPAREN               : 5 6 9 10 11 12 29 34 48 49 58 59 60 86
RSQUARE              : 26 26 27 64 64 65 66
SEMICOLON            : 1 2 3 4 14 15 29 46 47 48 49
THEN                 : 58 59
TO                   : 63
VAR                  : 13
VOID                 : 17
WHILE                : 34
WRITE                : 29
error                : 

Nonterminals, with rules where they appear

asignacion           : 39
aux_comparacion      : 68
aux_escritura        : 29 32 33
aux_expresion        : 67 71 72
aux_funcion          : 1 3 8
aux_lectura          : 49 52 53
aux_letrero          : 54 57
aux_lista            : 24 25
aux_lista_rec        : 23 25
aux_llamada          : 60 62
bloque               : 5 6 9 10 11 12 34 58 59 59 63
comparacion          : 67 69 70 71 72
condicional          : 40
decision             : 44
dimensiones          : 51 53
escritura            : 41
estatuto             : 37 38
estatutos            : 35 37
exp                  : 73 73 74 74 75 75 76 76 77 77 78 78 79 81 82
expresion            : 31 33 34 47 48 58 59 61 62 63 63 64 64 65 65 66 86
factor               : 83 84 85
funcion              : 7 8
lectura              : 43
letrero              : 30 32
lista_ids            : 14 15
llamada              : 46 88 90 92
main                 : 1 2 3 4
no_condicional       : 45
parametros           : 9 10 22
pn_add_function      : 9 10 11 12
pn_add_parameter     : 21 22
pn_add_symbol        : 26 27 28
pn_addition_substraction : 80 81 82
pn_and               : 69 71
pn_arg_count         : 60
pn_assign            : 47 63
pn_comparison        : 63 73 74 75 76 77 78
pn_current_function  : 5 6
pn_current_type      : 17 18 19 20
pn_else              : 59
pn_end_function      : 9 10 11 12
pn_for_go_back       : 63
pn_for_go_false      : 63
pn_for_push_comparison : 63
pn_func_era          : 60
pn_func_gosub        : 60
pn_func_var_count    : 9 11
pn_go_main           : 1 2 3 4
pn_if_1              : 58 59
pn_if_2              : 58 59
pn_multiplication_division : 83 84 85
pn_or                : 70 72
pn_param_count       : 9 10
pn_program_end       : 1 2 3 4
pn_push_constant_and_type : 94 95 96
pn_push_operand_and_type : 47 50 51 52 53 63 93
pn_push_operator     : 47 48 63 69 70 71 72 73 74 75 76 77 78 81 82 84 85
pn_push_read_operator : 50 51 52 53
pn_push_write_operator : 30 31 32 33
pn_read              : 50 51 52 53
pn_retorno           : 48
pn_verify_argument   : 61 62
pn_verify_func       : 60
pn_while_1           : 34
pn_while_2           : 34
pn_while_3           : 34
pn_write             : 30 31 32 33
program              : 0
retorno              : 42
termino              : 80 81 82 84 85
tipo                 : 14 15 16 21 22
tipo_retorno         : 9 10 11 12
var                  : 13 15
var_cte              : 87 89 91
vars                 : 1 2 5 9 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON vars aux_funcion pn_go_main main pn_program_end
    (2) program -> . PROGRAM ID SEMICOLON vars pn_go_main main pn_program_end
    (3) program -> . PROGRAM ID SEMICOLON aux_funcion pn_go_main main pn_program_end
    (4) program -> . PROGRAM ID SEMICOLON pn_go_main main pn_program_end

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON vars aux_funcion pn_go_main main pn_program_end
    (2) program -> PROGRAM . ID SEMICOLON vars pn_go_main main pn_program_end
    (3) program -> PROGRAM . ID SEMICOLON aux_funcion pn_go_main main pn_program_end
    (4) program -> PROGRAM . ID SEMICOLON pn_go_main main pn_program_end

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON vars aux_funcion pn_go_main main pn_program_end
    (2) program -> PROGRAM ID . SEMICOLON vars pn_go_main main pn_program_end
    (3) program -> PROGRAM ID . SEMICOLON aux_funcion pn_go_main main pn_program_end
    (4) program -> PROGRAM ID . SEMICOLON pn_go_main main pn_program_end

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . vars aux_funcion pn_go_main main pn_program_end
    (2) program -> PROGRAM ID SEMICOLON . vars pn_go_main main pn_program_end
    (3) program -> PROGRAM ID SEMICOLON . aux_funcion pn_go_main main pn_program_end
    (4) program -> PROGRAM ID SEMICOLON . pn_go_main main pn_program_end
    (13) vars -> . VAR var
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (99) pn_go_main -> .
    (9) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN bloque pn_end_function
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    VAR             shift and go to state 8
    MAIN            reduce using rule 99 (pn_go_main -> .)
    VOID            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

    vars                           shift and go to state 5
    aux_funcion                    shift and go to state 6
    pn_go_main                     shift and go to state 7
    funcion                        shift and go to state 9
    tipo_retorno                   shift and go to state 10
    tipo                           shift and go to state 11

state 5

    (1) program -> PROGRAM ID SEMICOLON vars . aux_funcion pn_go_main main pn_program_end
    (2) program -> PROGRAM ID SEMICOLON vars . pn_go_main main pn_program_end
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (99) pn_go_main -> .
    (9) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN bloque pn_end_function
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    MAIN            reduce using rule 99 (pn_go_main -> .)
    VOID            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

    aux_funcion                    shift and go to state 16
    pn_go_main                     shift and go to state 17
    funcion                        shift and go to state 9
    tipo_retorno                   shift and go to state 10
    tipo                           shift and go to state 11

state 6

    (3) program -> PROGRAM ID SEMICOLON aux_funcion . pn_go_main main pn_program_end
    (99) pn_go_main -> .

    MAIN            reduce using rule 99 (pn_go_main -> .)

    pn_go_main                     shift and go to state 18

state 7

    (4) program -> PROGRAM ID SEMICOLON pn_go_main . main pn_program_end
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 20

    main                           shift and go to state 19

state 8

    (13) vars -> VAR . var
    (14) var -> . tipo COLON lista_ids SEMICOLON
    (15) var -> . tipo COLON lista_ids SEMICOLON var
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

    var                            shift and go to state 21
    tipo                           shift and go to state 22

state 9

    (7) aux_funcion -> funcion .
    (8) aux_funcion -> funcion . aux_funcion
    (7) aux_funcion -> . funcion
    (8) aux_funcion -> . funcion aux_funcion
    (9) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> . tipo_retorno MODULE ID pn_add_function LPAREN RPAREN bloque pn_end_function
    (16) tipo_retorno -> . tipo
    (17) tipo_retorno -> . VOID pn_current_type
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

    MAIN            reduce using rule 7 (aux_funcion -> funcion .)
    VOID            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

    funcion                        shift and go to state 9
    aux_funcion                    shift and go to state 23
    tipo_retorno                   shift and go to state 10
    tipo                           shift and go to state 11

state 10

    (9) funcion -> tipo_retorno . MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> tipo_retorno . MODULE ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> tipo_retorno . MODULE ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> tipo_retorno . MODULE ID pn_add_function LPAREN RPAREN bloque pn_end_function

    MODULE          shift and go to state 24


state 11

    (16) tipo_retorno -> tipo .

    MODULE          reduce using rule 16 (tipo_retorno -> tipo .)


state 12

    (17) tipo_retorno -> VOID . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 25

state 13

    (18) tipo -> INT . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 26

state 14

    (19) tipo -> FLOAT . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 27

state 15

    (20) tipo -> CHAR . pn_current_type
    (98) pn_current_type -> .

    MODULE          reduce using rule 98 (pn_current_type -> .)
    COLON           reduce using rule 98 (pn_current_type -> .)
    ID              reduce using rule 98 (pn_current_type -> .)

    pn_current_type                shift and go to state 28

state 16

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion . pn_go_main main pn_program_end
    (99) pn_go_main -> .

    MAIN            reduce using rule 99 (pn_go_main -> .)

    pn_go_main                     shift and go to state 29

state 17

    (2) program -> PROGRAM ID SEMICOLON vars pn_go_main . main pn_program_end
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 20

    main                           shift and go to state 30

state 18

    (3) program -> PROGRAM ID SEMICOLON aux_funcion pn_go_main . main pn_program_end
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 20

    main                           shift and go to state 31

state 19

    (4) program -> PROGRAM ID SEMICOLON pn_go_main main . pn_program_end
    (100) pn_program_end -> .

    $end            reduce using rule 100 (pn_program_end -> .)

    pn_program_end                 shift and go to state 32

state 20

    (5) main -> MAIN . pn_current_function LPAREN RPAREN vars bloque
    (6) main -> MAIN . pn_current_function LPAREN RPAREN bloque
    (97) pn_current_function -> .

    LPAREN          reduce using rule 97 (pn_current_function -> .)

    pn_current_function            shift and go to state 33

state 21

    (13) vars -> VAR var .

    VOID            reduce using rule 13 (vars -> VAR var .)
    INT             reduce using rule 13 (vars -> VAR var .)
    FLOAT           reduce using rule 13 (vars -> VAR var .)
    CHAR            reduce using rule 13 (vars -> VAR var .)
    MAIN            reduce using rule 13 (vars -> VAR var .)
    LBRACKET        reduce using rule 13 (vars -> VAR var .)


state 22

    (14) var -> tipo . COLON lista_ids SEMICOLON
    (15) var -> tipo . COLON lista_ids SEMICOLON var

    COLON           shift and go to state 34


state 23

    (8) aux_funcion -> funcion aux_funcion .

    MAIN            reduce using rule 8 (aux_funcion -> funcion aux_funcion .)


state 24

    (9) funcion -> tipo_retorno MODULE . ID pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> tipo_retorno MODULE . ID pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> tipo_retorno MODULE . ID pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> tipo_retorno MODULE . ID pn_add_function LPAREN RPAREN bloque pn_end_function

    ID              shift and go to state 35


state 25

    (17) tipo_retorno -> VOID pn_current_type .

    MODULE          reduce using rule 17 (tipo_retorno -> VOID pn_current_type .)


state 26

    (18) tipo -> INT pn_current_type .

    MODULE          reduce using rule 18 (tipo -> INT pn_current_type .)
    COLON           reduce using rule 18 (tipo -> INT pn_current_type .)
    ID              reduce using rule 18 (tipo -> INT pn_current_type .)


state 27

    (19) tipo -> FLOAT pn_current_type .

    MODULE          reduce using rule 19 (tipo -> FLOAT pn_current_type .)
    COLON           reduce using rule 19 (tipo -> FLOAT pn_current_type .)
    ID              reduce using rule 19 (tipo -> FLOAT pn_current_type .)


state 28

    (20) tipo -> CHAR pn_current_type .

    MODULE          reduce using rule 20 (tipo -> CHAR pn_current_type .)
    COLON           reduce using rule 20 (tipo -> CHAR pn_current_type .)
    ID              reduce using rule 20 (tipo -> CHAR pn_current_type .)


state 29

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion pn_go_main . main pn_program_end
    (5) main -> . MAIN pn_current_function LPAREN RPAREN vars bloque
    (6) main -> . MAIN pn_current_function LPAREN RPAREN bloque

    MAIN            shift and go to state 20

    main                           shift and go to state 36

state 30

    (2) program -> PROGRAM ID SEMICOLON vars pn_go_main main . pn_program_end
    (100) pn_program_end -> .

    $end            reduce using rule 100 (pn_program_end -> .)

    pn_program_end                 shift and go to state 37

state 31

    (3) program -> PROGRAM ID SEMICOLON aux_funcion pn_go_main main . pn_program_end
    (100) pn_program_end -> .

    $end            reduce using rule 100 (pn_program_end -> .)

    pn_program_end                 shift and go to state 38

state 32

    (4) program -> PROGRAM ID SEMICOLON pn_go_main main pn_program_end .

    $end            reduce using rule 4 (program -> PROGRAM ID SEMICOLON pn_go_main main pn_program_end .)


state 33

    (5) main -> MAIN pn_current_function . LPAREN RPAREN vars bloque
    (6) main -> MAIN pn_current_function . LPAREN RPAREN bloque

    LPAREN          shift and go to state 39


state 34

    (14) var -> tipo COLON . lista_ids SEMICOLON
    (15) var -> tipo COLON . lista_ids SEMICOLON var
    (23) lista_ids -> . aux_lista_rec
    (24) aux_lista_rec -> . aux_lista
    (25) aux_lista_rec -> . aux_lista COMMA aux_lista_rec
    (26) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> . ID pn_add_symbol

    ID              shift and go to state 43

    lista_ids                      shift and go to state 40
    aux_lista_rec                  shift and go to state 41
    aux_lista                      shift and go to state 42

state 35

    (9) funcion -> tipo_retorno MODULE ID . pn_add_function LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> tipo_retorno MODULE ID . pn_add_function LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> tipo_retorno MODULE ID . pn_add_function LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> tipo_retorno MODULE ID . pn_add_function LPAREN RPAREN bloque pn_end_function
    (124) pn_add_function -> .

    LPAREN          reduce using rule 124 (pn_add_function -> .)

    pn_add_function                shift and go to state 44

state 36

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion pn_go_main main . pn_program_end
    (100) pn_program_end -> .

    $end            reduce using rule 100 (pn_program_end -> .)

    pn_program_end                 shift and go to state 45

state 37

    (2) program -> PROGRAM ID SEMICOLON vars pn_go_main main pn_program_end .

    $end            reduce using rule 2 (program -> PROGRAM ID SEMICOLON vars pn_go_main main pn_program_end .)


state 38

    (3) program -> PROGRAM ID SEMICOLON aux_funcion pn_go_main main pn_program_end .

    $end            reduce using rule 3 (program -> PROGRAM ID SEMICOLON aux_funcion pn_go_main main pn_program_end .)


state 39

    (5) main -> MAIN pn_current_function LPAREN . RPAREN vars bloque
    (6) main -> MAIN pn_current_function LPAREN . RPAREN bloque

    RPAREN          shift and go to state 46


state 40

    (14) var -> tipo COLON lista_ids . SEMICOLON
    (15) var -> tipo COLON lista_ids . SEMICOLON var

    SEMICOLON       shift and go to state 47


state 41

    (23) lista_ids -> aux_lista_rec .

    SEMICOLON       reduce using rule 23 (lista_ids -> aux_lista_rec .)


state 42

    (24) aux_lista_rec -> aux_lista .
    (25) aux_lista_rec -> aux_lista . COMMA aux_lista_rec

    SEMICOLON       reduce using rule 24 (aux_lista_rec -> aux_lista .)
    COMMA           shift and go to state 48


state 43

    (26) aux_lista -> ID . pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> ID . pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> ID . pn_add_symbol
    (101) pn_add_symbol -> .

    LSQUARE         reduce using rule 101 (pn_add_symbol -> .)
    COMMA           reduce using rule 101 (pn_add_symbol -> .)
    SEMICOLON       reduce using rule 101 (pn_add_symbol -> .)

    pn_add_symbol                  shift and go to state 49

state 44

    (9) funcion -> tipo_retorno MODULE ID pn_add_function . LPAREN parametros pn_param_count RPAREN vars pn_func_var_count bloque pn_end_function
    (10) funcion -> tipo_retorno MODULE ID pn_add_function . LPAREN parametros pn_param_count RPAREN bloque pn_end_function
    (11) funcion -> tipo_retorno MODULE ID pn_add_function . LPAREN RPAREN vars pn_func_var_count bloque pn_end_function
    (12) funcion -> tipo_retorno MODULE ID pn_add_function . LPAREN RPAREN bloque pn_end_function

    LPAREN          shift and go to state 50


state 45

    (1) program -> PROGRAM ID SEMICOLON vars aux_funcion pn_go_main main pn_program_end .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON vars aux_funcion pn_go_main main pn_program_end .)


state 46

    (5) main -> MAIN pn_current_function LPAREN RPAREN . vars bloque
    (6) main -> MAIN pn_current_function LPAREN RPAREN . bloque
    (13) vars -> . VAR var
    (35) bloque -> . LBRACKET estatutos RBRACKET
    (36) bloque -> . LBRACKET RBRACKET

    VAR             shift and go to state 8
    LBRACKET        shift and go to state 53

    vars                           shift and go to state 51
    bloque                         shift and go to state 52

state 47

    (14) var -> tipo COLON lista_ids SEMICOLON .
    (15) var -> tipo COLON lista_ids SEMICOLON . var
    (14) var -> . tipo COLON lista_ids SEMICOLON
    (15) var -> . tipo COLON lista_ids SEMICOLON var
    (18) tipo -> . INT pn_current_type
    (19) tipo -> . FLOAT pn_current_type
    (20) tipo -> . CHAR pn_current_type

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    VOID            reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    MAIN            reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    LBRACKET        reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .)
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15

  ! INT             [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]
  ! FLOAT           [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]
  ! CHAR            [ reduce using rule 14 (var -> tipo COLON lista_ids SEMICOLON .) ]

    tipo                           shift and go to state 22
    var                            shift and go to state 54

state 48

    (25) aux_lista_rec -> aux_lista COMMA . aux_lista_rec
    (24) aux_lista_rec -> . aux_lista
    (25) aux_lista_rec -> . aux_lista COMMA aux_lista_rec
    (26) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> . ID pn_add_symbol LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> . ID pn_add_symbol

    ID              shift and go to state 43

    aux_lista                      shift and go to state 42
    aux_lista_rec                  shift and go to state 55

state 49

    (26) aux_lista -> ID pn_add_symbol . LSQUARE CTE_INT RSQUARE LSQUARE CTE_INT RSQUARE
    (27) aux_lista -> ID pn_add_symbol . LSQUARE CTE_INT RSQUARE
    (28) aux_lista -> ID pn_add_symbol .

    LSQUARE         shift and go to state 56
    COMMA           reduce using rule 28 (aux_lista -> ID pn_add_symbol .)
    SEMICOLON       reduce using rule 28 (aux_lista -> ID pn_add_symbol .)


state 50
